@@ -8,6 +8,10 @@
         name="Themepage Promotion Sections"
         />
 
+    <subscriber factory=".marshaller.VersioningModifier" 
+                for="eea.versions.interfaces.IVersionEnhanced"
+                provides="eea.rdfmarshaller.interfaces.ISurfResourceModifier" />
+
     <adapter factory=".feeds.FeedPortletInfo" />
     <adapter factory=".feeds.FeedItemPortletInfo" />
     <adapter factory=".feeds.NavigationRootRDFPortletDataCollector" />
